objects/Channel__c/Channel__c.object-meta.xml
<CustomObject>
    <description>Represents a youtube channel</description>
    <label>Channel</label>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>