objects/Channel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Industry</field>
            <operation>equals</operation>
            <value>Youtube</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channels</relationshipLabel>
    <relationshipName>Channels</relationshipName>
    <type>Lookup</type>
</CustomField>