objects/Channel__c/fields/ChannelYtbID__c.field-meta.xml
<CustomField>
    <fullName>ChannelYtbID__c</fullName>
    <description>The id of youtube channel</description>
    <label>ChannelYtbID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>