objects/Channel__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country of youtube channel</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>