objects/Channel__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of youtube channel</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>