objects/Channel__c/fields/Subscriber_Counts__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Counts__c</fullName>
    <description>Number of subscribers in the youtube channel</description>
    <label>Subscriber Counts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>