objects/Channel__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <description>The thumbnail of youtube channel</description>
    <label>Thumbnail</label>
    <type>Url</type>
</CustomField>