objects/Channel__c/fields/Thumbnail_Image__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Image__c</fullName>
    <formula>IMAGE( Thumbnail__c ,  Name + &apos; Photo&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thumbnail_Image</label>
    <type>Text</type>
</CustomField>