objects/Channel__c/fields/Video_Counts__c.field-meta.xml
<CustomField>
    <fullName>Video_Counts__c</fullName>
    <description>The number of videos from Youtube channel</description>
    <label>Video Counts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>