objects/Channel__c/fields/Videos_Registrados__c.field-meta.xml
<CustomField>
    <fullName>Videos_Registrados__c</fullName>
    <label>Vídeos Registrados</label>
    <summaryFilterItems>
        <field>Video__c.VideoYtbId__c</field>
        <operation>notEqual</operation>
        <value>null</value>
    </summaryFilterItems>
    <summaryForeignKey>Video__c.Channel__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>